--- a/.env_server
+++ b/.env_server
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=algoritmocandegabe.com
 APP_ENV=local
 APP_KEY=base64:UGSkzOZuLS7bmNW+W/OaP1MEr3dlFpBYXq7UPut3SXk=
 APP_DEBUG=true
@@ -24,11 +24,13 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=efectylogistic.com
-MAIL_PORT=465
-mail_username=casillero@efectylogistic.com
-MAIL_PASSWORD=Mayo2015
-MAIL_ENCRYPTION=ssl
+MAIL_HOST=smtp.mailtrap.io
+MAIL_PORT=587
+MAIL_USERNAME=a888886049858d
+MAIL_PASSWORD=44bb42157ebee1
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=from@example.com
+MAIL_FROM_NAME=Example
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
