--- a/.env_server
+++ b/.env_server
@@ -2,7 +2,7 @@ APP_NAME=algoritmocandegabe.com
 APP_ENV=local
 APP_KEY=base64:UGSkzOZuLS7bmNW+W/OaP1MEr3dlFpBYXq7UPut3SXk=
 APP_DEBUG=true
-APP_URL=http://homeopatia.smartbiosfera.com/
+APP_URL=http://homeopatia.smartbiosfera.com
 
 LOG_CHANNEL=stack
 
@@ -24,13 +24,13 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
+MAIL_HOST=mail.smartbiosfera.com
 MAIL_PORT=587
-MAIL_USERNAME=a888886049858d
-MAIL_PASSWORD=44bb42157ebee1
-MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS=from@example.com
-MAIL_FROM_NAME=Example
+MAIL_USERNAME=contacto@smartbiosfera.com
+MAIL_PASSWORD=yXu2mVP1$
+MAIL_ENCRYPTION=null
+MAIL_FROM_ADDRESS=contacto@smartbiosfera.com
+MAIL_FROM_NAME=Contacto
 
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
