probando ssl en el server

--- a/composer.json
+++ b/composer.json
@@ -6,22 +6,22 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
+        "appointer/swaggervel": "dev-master",
         "caffeinated/shinobi": "^3.3",
+        "doctrine/dbal": "~2.3",
         "fideloper/proxy": "^4.0",
+        "infyomlabs/adminlte-templates": "5.7.x-dev",
+        "infyomlabs/laravel-generator": "5.7.x-dev",
+        "infyomlabs/swagger-generator": "dev-master",
         "laravel/cashier": "^9.2",
         "laravel/framework": "5.7.*",
         "laravel/passport": "^7.5",
-        "laravel/socialite": "^4.1",
+        "laravel/socialite": "^4.3",
         "laravel/tinker": "^1.0",
+        "laravelcollective/html": "^5.7.0",
         "laraveles/spanish": "^1.2",
         "paypal/rest-api-sdk-php": "^1.14",
-        "yajra/laravel-datatables-oracle": "8.*",
-        "infyomlabs/laravel-generator": "5.7.x-dev",
-        "laravelcollective/html": "^5.7.0",
-        "infyomlabs/adminlte-templates": "5.7.x-dev",
-        "infyomlabs/swagger-generator": "dev-master",
-        "appointer/swaggervel": "dev-master",
-        "doctrine/dbal": "~2.3"
+        "yajra/laravel-datatables-oracle": "8.*"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
