SI Propuesta de nueva tabla de Estudios Mas Parecida a primera tabla

--- a/.env_server
+++ b/.env_server
@@ -1,8 +1,8 @@
 APP_NAME=algoritmocandegabe.com
-APP_ENV=local
+APP_ENV=production
 APP_KEY=base64:UGSkzOZuLS7bmNW+W/OaP1MEr3dlFpBYXq7UPut3SXk=
-APP_DEBUG=true
-APP_URL=http://homeopatia.smartbiosfera.com
+APP_DEBUG=false
+APP_URL=https://homeopatia.smartbiosfera.com
 
 LOG_CHANNEL=stack
 
@@ -46,3 +46,12 @@ PAYPAL_MODE=sandbox
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+FACEBOOK_CLIENT_ID=754694391673525
+FACEBOOK_CLIENT_SECRET=8d7926fba285f014194dfd4901e5aef6
+
+TWITTER_CLIENT_ID=
+TWITTER_CLIENT_SECRET=
+
+GOOGLE_CLIENT_ID=1006111087482-aekl8l1rp2ajho92mmho5bvvj1rm9d0f.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=sX2n8w3kPeCsD7-NYeyjWRXk
